kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudcart-ingress-api
  namespace: cloudcart
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # Backend APIs (Forward to api-gateway with regex rewrites)
      - path: /api/v1(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: api-gateway
            port:
              number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudcart-ingress-frontend
  namespace: cloudcart
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # Frontend (No rewrites, forwards static CSS/JS assets directly)
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
